--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ MONGO_URI = "mongodb+srv://irfanusuf33:algo_123@algoacademy.v8uqv.mongodb.net/Al
 ORIGIN ="https://give-metask.vercel.app"
 PORT = 4000
 SECRET_KEY = "thisismysecretkey"
+
+
+
+# rag application 
